test/Fail/Issue1609f.agda
-- Andreas, 2015-07-13  Better parse errors for illegal type signatures

(A B) : Set1
A B = Set
