test/Fail/Issue1609f.err
Issue1609f.agda:3.9: error: [ParseError]
Illegal name in type signature: (A B)
